--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "generator-angular-nmi",
-  "version": "1.0.0",
-  "description": "An opinionated generator to create various AngularJS resources.",
-  "keywords": [
-    "yeoman-generator"
-  ],
-  "author": "Nassos A. Michas <nassosmichas@me.com>",
-  "license": "EUPL-1.1",
-  "dependencies": {
-    "colog": "^1.0.4",
-    "mkdirp": "^0.5.1",
-    "yeoman-generator": "^0.20.2"
-  },
-  "files": [
-    "app"
-  ],
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5",
-    "mocha-sinon": "^1.1.5",
-    "sinon": "^1.17.3",
-    "temp": "^0.8.3",
-    "yeoman-assert": "^2.1.1"
-  }
+	"name": "generator-angular-nmi",
+	"version": "1.0.0",
+	"description": "Yeoman generator for various AngularJS resources to encourage a common style within a project.",
+	"keywords": ["yeoman-generator", "angular", "angularjs", "yeoman", 
+		"generator", "styleguide", "ng"],
+	"author": "Nassos A. Michas <nassosmichas@me.com>",
+	"license": "GPL-3.0",
+	"bugs": "https://github.com/NMichas/yeoman-generator-angular-nmi/issues",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/NMichas/yeoman-generator-angular-nmi.git"
+	},
+	
+	"dependencies": 
+	{
+		"colog": "^1.0.4",
+		"mkdirp": "^0.5.1",
+		"yeoman-generator": "^0.20.2"
+	},
+	
+	"files": 
+	[
+		"app"
+	],
+
+	"devDependencies": 
+	{
+		"chai": "^3.5.0",
+		"mocha": "^2.4.5",
+		"mocha-sinon": "^1.1.5",
+		"sinon": "^1.17.3",
+		"temp": "^0.8.3",
+		"yeoman-assert": "^2.1.1"
+	},
+
+	"scripts": {
+		"test": "mocha"
+	}	
+	
 }
