--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "i18n": "^0.8.1",
     "mkdirp": "^0.5.1",
     "os-locale": "^1.4.0",
-    "yeoman-generator": "^0.22.5"
+    "yeoman-generator": "^0.23.4"
   },
   "files": [
     "app",
-    "base",
+    "base2",
+    "base3",
     "constant",
     "controller",
     "factory",
